--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,5 +3,5 @@ spring:
     name: holder-account-service
   cloud:
     config:
-      enabled: 'true'
+      enabled: true
       uri: http://localhost:8081
